--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   position: relative;
   overflow: hidden;
   z-index: 3;
-  /* display: none; */
+   display: none; 
 }
 
 #logo {
@@ -228,7 +228,7 @@ body {
 .main {
   width: 23.4375rem;
   height: 38.3rem;
-  background: linear-gradient(to bottom, #9b2eca, #198AB7, #56DDCE 100%);
+  background: linear-gradient(to bottom, #9b2eca, #298bb3, #56DDCE 100%);
   position: absolute;
   z-index: 1;
   overflow: hidden;
@@ -239,7 +239,7 @@ body {
   display: flex;
   justify-content: space-between;
   border-bottom-right-radius: 25px;
-  background: linear-gradient(to top, #072C50, #004A9C, #961ab8);
+  background: linear-gradient(to top, #072542, #0f519c, #961ab8);
 }
 
 /* design of  hamburger menu  is done */
@@ -278,7 +278,7 @@ input[type="checkbox"] {
 }
 
 input:checked[type="checkbox"] {
-  background: #54e4fd;
+  background: #f7d4f4;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
@@ -318,11 +318,10 @@ input:checked[type="checkbox"]:before {
   transform: translateY(420px);
   width: 23.4375rem;
   height: 35rem;
-  background: linear-gradient(#072C50, #004DA3, #d766fa);
+  background: linear-gradient(#10385f, #084fa0, #d766fa);
   position: absolute;
   top: 10%;
   border-top-right-radius: 5%;
-  transition: all 0.5s ease;
   z-index: 1;
 }
 
@@ -349,7 +348,7 @@ input:checked[type="checkbox"]:before {
 .nav-links {
   position: absolute;
   left: 0%;
-  top: 7.5%;
+  top: 7.3%;
   transform: translateY(-50%);
   z-index: 2;
   height: 35rem;
@@ -422,12 +421,12 @@ input:checked[type="checkbox"]:before {
   background: rgb(12, 21, 22);
   margin: 0 1px 0 0;
   padding: 0 1px 0 0;
-  height: 16rem;
+  height: 16.5rem;
   width: 23.4375rem;
   border-top-right-radius: 7%;
-  border-bottom-left-radius: 55%;
-  border-bottom-right-radius: 55%;
-  box-shadow: 4px 4px 4px 1px #dedfe0;
+  border-bottom-left-radius: 48%;
+  border-bottom-right-radius: 48%;
+  box-shadow: 0px 1px 5px 0px #0f0f0f;
 }
 
 /*designing of shuffle and replay button is done*/
@@ -532,6 +531,7 @@ input:checked[type="checkbox"]:before {
 
 .play {
   padding: 0 2rem 0 2rem;
+
 }
 
 .playorpause {
@@ -542,15 +542,18 @@ input:checked[type="checkbox"]:before {
   top: 25%;
   color: #ffffff;
 }
-
-.play i.fas.fa-play {
-  border-radius: 50%;
-  transition: all 0.1ms ease-in;
+.fas.fa-play{
+  transition: all 0.3s ease-in;
 }
 
-.play i.fas.fa-play:active {
-  background: #c4c4c460;
-  box-shadow: 0px 0px 5px 3px #f1f1f1;
+.play i.fas.fa-play:before {
+  transition: all 1s ease-in;
+  transform:scale(0);
+}
+
+.play i.fas.fa-play:hover {
+  transform:scale(1.2);
+
 }
 
 i.fas.fa-backward:hover, i.fas.fa-forward:hover {
@@ -574,12 +577,11 @@ i.fa.fa-random, i.fas.fa-redo-alt {
 .progress-bar {
   position: absolute;
   top: 83.5%;
-  left: 2%;
+  left: 2.5%;
   width: 95%;
   height: 4px;
   background: #f7d4f4;
   cursor: pointer;
-  border-radius: 10%;
   z-index: 2;
 }
 
@@ -607,7 +609,7 @@ i.fa.fa-random, i.fas.fa-redo-alt {
 }
 
 .albums {
-  margin-top: 0.7rem;
+  margin-top:5px;
   align-items: center;
   justify-content: center;
   display: flex;
@@ -653,36 +655,61 @@ i.fa.fa-random, i.fas.fa-redo-alt {
   width: 27vw;
   margin-left: 8.4rem;
   margin-top: 0.5rem;
-  border-radius: 50%;
+  border-radius: 10%;
 }
 
 .artistnamedisplay {
   font-weight: bold;
+  font-family: 'Josefin sans', serif;
+  font-size:1.2rem;
+  color:lemonchiffon;
   text-align: center;
+  margin-left:-11px;
+  padding-top: 5px;
 }
 
 .songlist li {
-  color: wheat;
-  border-radius: 10px;
+  color:#ffffff;
+  border-radius: 5px;
   cursor: pointer;
-  background-color: grey;
+  background:linear-gradient(to right,#350fb1,#0ad6e9);
   list-style-type: none;
-  height: 5vh;
-  margin-top: 0.3rem;
-  margin-left: -2rem;
+  height:3vh;
+  margin-left:-1rem;
+  width:22vw;
+  box-shadow:0 0 5px 2px rgba(0, 0, 0, 0.4);
+  padding:7px 5px 5px 5px;
+  transition:all 0.6s ease-out ;
 }
 
+
 .songlist li {
-  padding-top: 0.19rem;
-  font-family: 'Source Serif Pro', serif;
-  text-align: start;
-  padding-left: 0.4rem;
+  font-family: 'Josefin sans', serif;
+  font-size:1.2rem;
+  margin-top: 6px;
+  text-align: left;
+  position:relative;
 }
+
+.songlist li:before {
+transform:scale(1);
+
+}
+
+.songlist li:hover{
+  transform:scale(1.1);
+  box-shadow:none;
+}
+.songlist li:active{
+  background: rgba(255, 255, 255, 0.2);
+}
+
 
 .songlist i {
-  margin-top: 0.4rem;
+  margin-top: 0.1rem;
   position: absolute;
   right: 2rem;
+  text-align:center;
 }
 
 .songname {
@@ -690,6 +717,35 @@ i.fa.fa-random, i.fas.fa-redo-alt {
 }
 
 
+
+
+
+
+
+.darkmodeactivatedflap{
+  background-image: linear-gradient(#3d0b77,#1f1e1e );
+}
+
+.darkmodeactivatedheader{
+  background-image: linear-gradient( #3d0b77,#242323 );
+}
+
+.darkmodeactivatedmain{
+  background-image: linear-gradient( #421b6e,#1d1d1d );
+
+}
+
+/*accessing the songlist is what needed to be fixed or by songselect classname */
+
+.darkmodeactivatedsongs{
+  background-image: linear-gradient( #5e338f,#1b1b1b);
+    
+}
+/*solution to be found*/
+
+.darkmodeprogress{
+  background: linear-gradient( #450b80,#f8b3f2 );
+}
 
 
 /* for tablets */
@@ -724,7 +780,7 @@ i.fa.fa-random, i.fas.fa-redo-alt {
     width: 5.3vw;
     margin-left: 9.0rem;
     margin-top: 0.5rem;
-    border-radius: 50%;
+    border-radius: 10%;
   }
 }
 
@@ -736,5 +792,34 @@ i.fa.fa-random, i.fas.fa-redo-alt {
     width: 100vw;
     height: 100vh;
   }
+  .flap{
+    width:100vw;
+   height:100vh;
+   position:absolute;
+   top:9%;
+    }
+    .images{
+      width:100vw;
+      height:45vh;
+    }
+    .main-contents{
+      padding-bottom:7%;
+    }
+    .nav-links{
+      height:100vh;
+      top:6.6%;
+    }
+    .songlist li{
+      width:84vw;
+    }
+}
+    
+
+
+@media only screen and (max-width:400px){
+    .artistnamedisplay{
+      text-align: center;
+      margin-left:11px;
+    }
 }
 
