--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ body {
 /*preloading page design begin within music */
 
 .music {
-  width: 23.4375rem;
-  height: 38.3rem;
+  width: 25.4375rem;
+  height: 100vh;
   background: linear-gradient(#020202, #06266b);
   position: relative;
   overflow: hidden;
@@ -227,7 +227,7 @@ body {
 
 .main {
   width: 23.4375rem;
-  height: 38.3rem;
+  height: 90vh;
   background: linear-gradient(to bottom, #9b2eca, #298bb3, #56DDCE 100%);
   position: absolute;
   z-index: 1;
@@ -317,7 +317,7 @@ input:checked[type="checkbox"]:before {
 /* design of flap which moves upward and downward */
 
 .flap {
-  transform: translateY(420px);
+  transform: translateY(460px); 
   width: 23.4375rem;
   height: 35rem;
   background: linear-gradient(#10385f, #084fa0, #d766fa);
@@ -325,6 +325,7 @@ input:checked[type="checkbox"]:before {
   top: 10%;
   border-top-right-radius: 5%;
   z-index: 1;
+
 }
 
 /* design of translate  button associated with flap is done */
@@ -769,6 +770,19 @@ transform:scale(1);
     border-radius: 10px;
     width: 17vw;
     height: 20vh;
+  }
+  .flap {
+    transform: translateY(420px); 
+  
+    /* ------------------------------------------------------------------------------------- */
+    width: 23.4375rem;
+    height: 35rem;
+    background: linear-gradient(#10385f, #084fa0, #d766fa);
+    position: absolute;
+    top: 10%;
+    border-top-right-radius: 5%;
+    z-index: 1;
+  
   }
 }
 
