--- a/style.css
+++ b/style.css
@@ -858,6 +858,10 @@ transform:scale(1);
       position:absolute;
       top:88%;
     }
+    .artistnamedisplay{
+      margin-right: 1.3rem;
+    }
+    
     
 }
 
